--- a/css/foundation.css
+++ b/css/foundation.css
@@ -5718,3 +5718,8 @@ th.hide-for-touch {
 
   th.show-for-print {
     display: table-cell !important; } }
+
+  .box:hover
+{ 
+background-color:white;
+}
